# squishy-rs

./: Cargo.toml  README.md
.github/workflows/: release.yaml
squishy/: Cargo.toml
squishy-cli/: Cargo.toml
squishy-cli/src/: appimage.rs  cli.rs  main.rs
squishy/src/: appimage.rs  dwarfs.rs  error.rs  lib.rs
squishy/src/dwarfs/: archive.rs  fsst.rs  mod.rs  section.rs
squishy/src/dwarfs/metadata/: de_frozen.rs  de_thrift.rs  mod.rs
