[workspace]
members = [
    "squishy-cli",
    "squishy",
]
resolver = "2"

[workspace.package]
version = "0.5.1"
authors = ["Rabindra Dhakal <contact@qaidvoid.dev>"]
license = "MIT"
edition = "2021"
description = "A convenient high level library for reading SquashFS and DwarFS files"
repository = "https://github.com/pkgforge/squishy-rs"
keywords = ["appimage", "filesystem", "squashfs", "dwarfs", "linux"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
