[package]
name = "squishy-cli"
description = "A simple CLI tool to work with SquashFS and DwarFS files"
version = "0.3.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "squishy"
path = "src/main.rs"

[features]
default = ["dwarfs"]
dwarfs = ["squishy/dwarfs"]

[dependencies]
squishy = { path = "../squishy", version = "0.3.1", features = ["appimage", "rayon"] }
clap = { version = "4.5.53", features = ["cargo", "derive"] }
goblin = { version = "0.10.4", default-features = false, features = ["elf32", "elf64", "endian_fd", "std"] }
rayon = "1.11.0"
