[package]
name = "squishy"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
name = "squishy"
path = "src/lib.rs"

[features]
default = []
appimage = ["goblin", "rayon"]
rayon = ["dep:rayon"]
dwarfs = ["dep:dwarfs"]

[dependencies]
backhand = "0.24.0"
dwarfs = { version = "0.2.1", optional = true }
goblin = { version = "0.10.4", default-features = false, features = ["elf32", "elf64", "endian_fd", "std"], optional = true }
rayon = { version = "1.11.0", optional = true }
thiserror = "2.0.17"
