[package]
name = "squishy"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
name = "squishy"
path = "src/lib.rs"

[features]
default = []
appimage = ["goblin", "rayon"]
rayon = ["dep:rayon"]
dwarfs = [
    "dep:bstr",
    "dep:lru",
    "dep:positioned-io",
    "dep:serde",
    "dep:sha2",
    "dep:xxhash-rust",
    "dep:zerocopy",
    "dep:zstd-safe",
]

[dependencies]
backhand = "0.25.1"
bstr = { version = "1.12.2", features = ["serde"], optional = true }
goblin = { version = "0.10.7", default-features = false, features = ["elf32", "elf64", "endian_fd", "std"], optional = true }
lru = { version = "0.18.0", optional = true }
positioned-io = { version = "0.3.5", default-features = false, optional = true }
rayon = { version = "1.12.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
sha2 = { version = "0.11.0", optional = true }
thiserror = "2.0.18"
xxhash-rust = { version = "0.8.15", features = ["xxh3"], optional = true }
zerocopy = { version = "0.8.52", features = ["derive", "std"], optional = true }
zstd-safe = { version = "7.2.4", default-features = false, optional = true }
